# nrf_thingy52_env_monitor

./: .checkpatch.conf  .clang-format  .clang-tidy  .codechecker.json  .codechecker.skip  .gitignore  .zephyrrc  BLE_MESH_CONFIG.md  DEVELOPER.md  README.md  env.sh  requirements.txt
.github/: DEVELOPMENT_SETUP.md  copilot-instructions.md
.github/ISSUE_TEMPLATE/: bug_fix.md  documentation_update.md  feature_development.md
.github/instructions/: build-config.instructions.md  devicetree-and-board.instructions.md  firmware-c.instructions.md
.github/workflows/: ci-build.yml  ci-static-analysis.yml  ci-unit-tests.yml  hardware-ci.yml  unit-tests.yml
.west/: config
app/: CMakeLists.txt  Kconfig  Kconfig.sysbuild  prj.conf  sample.yaml  west.yml
app/boards/: thingy52.conf  thingy52.overlay  thingy52_mesh.conf
app/include/: battery_service.h  ble_advertiser.h  ble_battery_service.h  board.h  device_naming.h  ess_encode.h  ess_service.h  power_config.h  sensor_ccs811_driver.h  sensor_config.h  sensor_hts221_driver.h  sensor_lps22hb_driver.h  sensor_manager.h  uptime_service.h
app/legacy/mesh/: README.md  main_mesh.c  mesh.conf  model_handler.h
app/src/: battery_service.c  ble_advertiser.c  ble_battery_service.c  board.c  device_naming.c  ess_encode.c  ess_service.c  main.c  main_mesh.c  model_handler_env.c  sensor_ccs811_driver.c  sensor_hts221_driver.c  sensor_lps22hb_driver.c  sensor_manager.c  uptime_service.c
app/sysbuild/ipc_radio/: prj.conf  prj_mesh.conf
app/tests/: CMakeLists.txt  C_UNIT_TESTING_BEST_PRACTICES.md  README.md  prj.conf  prj_coverage.conf  testcase.yaml
app/tests/boards/: native_sim.conf
app/tests/hardware/: CMakeLists.txt  README.md  hardware_test.h  main_hardware_test.c  prj.conf  test_hardware_ble.c  test_hardware_gpio.c  test_hardware_power.c  test_hardware_sensors.c  testcase.yaml
app/tests/hardware/boards/: thingy52.overlay
app/tests/hardware/fixtures/: hardware_test_reference.md
app/tests/hardware/src/: test_hil_battery.c  test_hil_ccs811.c  test_hil_hts221.c  test_hil_lps22hb.c  test_hil_power_rails.c
app/tests/integration/battery_service/: CMakeLists.txt  prj.conf  testcase.yaml
app/tests/integration/battery_service/boards/: native_sim.overlay
app/tests/integration/battery_service/src/: test_battery_service.c
app/tests/integration/full_app/: CMakeLists.txt  prj.conf  testcase.yaml
app/tests/integration/full_app/boards/: native_sim.overlay
app/tests/integration/full_app/emul/: ccs811_emul.c  hts221_emul.c  lps22hb_emul.c
app/tests/integration/full_app/src/: test_full_app.c
app/tests/src/: test_battery_service.c  test_ess_service.c  test_main.c  test_main_simple.c  test_mock_framework.c  test_sensor_manager.c  test_sensor_manager_policy.c
app/tests/src/mocks/: mock_bluetooth.c  mock_gpio.c  mock_gpio.h  mock_i2c.c  mock_i2c.h  mock_sensor.c  mock_sensor.h
app/tests/unit/battery_service/: CMakeLists.txt  prj.conf  testcase.yaml
app/tests/unit/battery_service/src/: mock_battery_service.c  mock_battery_service.h  mock_bluetooth.c  mock_bluetooth.h  test_battery_service.c
app/tests/unit/ble_advertiser/: CMakeLists.txt  prj.conf  testcase.yaml
app/tests/unit/ble_advertiser/src/: fake_deps.c  mock_ble.c  mock_ble.h  test_ble_advertiser.c
app/tests/unit/common/mocks/: CMakeLists.txt  bt_gatt.c  bt_gatt.h  fff_globals.c  sensor_manager_mock.c  sensor_manager_mock.h
app/tests/unit/device_naming/: CMakeLists.txt  prj.conf  testcase.yaml
app/tests/unit/device_naming/src/: mock_hwinfo.c  mock_hwinfo.h  test_device_naming.c
app/tests/unit/ess_encode/: CMakeLists.txt  prj.conf  testcase.yaml
app/tests/unit/ess_encode/src/: test_ess_encode.c
app/tests/unit/ess_service/: CMakeLists.txt  prj.conf  testcase.yaml
app/tests/unit/ess_service/src/: test_ess_service.c
app/tests/unit/sensor_manager/: CMakeLists.txt  Kconfig  prj.conf  testcase.yaml
app/tests/unit/sensor_manager/boards/: native_sim.overlay
app/tests/unit/sensor_manager/src/: mock_drivers.c  mock_drivers.h  stub_devices.c  test_sensor_manager.c
app/tests/unit/sensor_manager_policy/: CMakeLists.txt  Kconfig  prj.conf  testcase.yaml
app/tests/unit/sensor_manager_policy/src/: test_sensor_data_contract.c
app/tests/unit/uptime_service/: CMakeLists.txt  prj.conf  testcase.yaml
app/tests/unit/uptime_service/src/: test_uptime_service.c
coverage/: coverage.functions.html  coverage.html  coverage.json  coverage.test_battery_service.c.17e35767fe775893483729864b4950a3.html  coverage.test_ess_service.c.36fc6dcfd205f45ef70644c93ac678d3.html  coverage.test_main_simple.c.55c4b3227e1e990b25693ac6e203d226.html  coverage.test_mock_framework.c.2091926047855ed7fd3edf321a1d27a4.html  coverage.test_sensor_manager.c.4b47e977c4c0f4e6b921c3621f6b8e21.html  coverage.txt
docs/: low_power.md
scripts/: ble_test_automation.py  coverage_report.sh  hardware_test_runner.py  parse_hardware_test_results.py  run_hil_tests.sh  serial_logger.py  verify_hardware.sh
