#
# Copyright (c) 2024 Nordic Semiconductor ASA
#
# SPDX-License-Identifier: LicenseRef-Nordic-5-Clause
#
cmake_minimum_required(VERSION 3.20.0)

find_package(Zephyr REQUIRED HINTS $ENV{ZEPHYR_BASE})
project(unit_battery_service)

target_sources(app PRIVATE
	src/test_battery_service.c
	src/mock_battery_service.c
	src/mock_bluetooth.c
	# Production unit under test:
	${CMAKE_SOURCE_DIR}/../../../src/ble_battery_service.c
)

target_include_directories(app PRIVATE
	src
	${CMAKE_SOURCE_DIR}/../../../include
)
